scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .scroll-to-top {
   position: fixed;
   bottom: 20px;
-  right: 20px;
-  background-color: #001f40a5;
+  right: 34px;
+  background-color: #4591e2a5;
   color: #ffffff;
   border: none;
   padding: 10px;
@@ -15,17 +15,14 @@
   outline: none;
   transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: auto; /* Set width to auto for same width as height */
+  width: auto; 
 }
 
 
 .scroll-to-top:hover {
   background-color: #004080;
-  /* Darken the background on hover */
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-  /* Enhance box-shadow on hover */
   transform: scale(1.1);
-  /* Add a slight scale effect on hover */
 }
 
 .dashboard {
@@ -151,7 +148,7 @@ textarea:focus {
 }
 
 
-button {
+.panelButton {
   color: #ffffff;
   background-color: #406bc3;
   transition: background-color 0.3s ease;
@@ -169,21 +166,21 @@ button {
 
 }
 
-button:hover {
+.panelButton:hover {
   background-color: #FF8F8F;
   transform: scale(1.05);
 
 }
 
-.dark button {
+.dark .panelButton {
   background-color: #4a5568;
 }
 
-.dark button:hover {
+.dark .panelButton:hover {
   background-color: #2a4365;
 }
 
-.dark button:focus {
+.dark .panelButton:focus {
   box-shadow: 0 0 0 0.25rem rgba(66, 153, 225, 0.8);
 }
 
